build: package updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "blender-llm-addin"
 version = "0.1.0"
-description = "Add your description here"
+description = "AI integration for Blender to generate Blender API scripts based on user prompts"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
