--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-beautifulsoup4>=4.12.0
 openai>=1.0.0
-tqdm>=4.65.0
-fsspec>=2023.5.0
-python-dotenv>=1.0.0
 ollama>=0.1.5
-chromadb==0.4.22
-sentence-transformers>=2.2.2
-numpy>=1.24.0,<2.0.0  # Pin to NumPy 1.x for ChromaDB compatibility
-tiktoken>=0.5.0  # Required for semantic chunker token counting
-psutil>=5.9.0
+scikit-learn>=1.3.0
+numpy>=1.24.0,<2.0.0
+requests>=2.31.0
